@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # int locationX
    # int locationY
    # int speedX
    # int speedY
    # BufferedImage image
    # int width
    # int height
    # boolean isValid

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(FlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedX():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# int maxHp
    # int hp
    # ShootStrategy strategy
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + getMaxHp:int
    + setStrategy(ShootStrategy strategy):void
    + shoot():List<BaseBullet>
 }

abstract class BaseBullet
{
    - int power
    + Bullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

abstract class AbstractProp
{
    # int bounceNum
    + AbstractProp(int locationX, int locationY, int speedX, int speedY)
    + work():void
    + forward():void
}

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- AbstractProp

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- Boss

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

AbstractProp <|-- BloodProp
AbstractProp <|-- BombProp
AbstractProp <|-- BulletProp

class HeroAircraft {
    - int shootNum
    - int power
    - int direction
    - int maxShootMun
    - int maxHeroHp
    - {static} instance
    + HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + {static} getInstance():HeroAircraft
    + {static} HeroAircraft getInstance(int locationX, int locationY, int speedX, int speedY, int hp):HeroAircraft
    + getShootNum():int
    + getMaxShootNum():int
    + forward():void
    + shoot():List<BaseBullet>
    + setShootNum(int num):void
    + resetShootNum():void
    + setHeroHp():void
    + decreaseShootNum():void
}

class EliteEnemy {
    - int power
    - int direction
    - BloodPropFactory bloodPropFactory
    - BombPropFactory bombPropFactory
    - BulletPropFactory bulletPropFactory
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + genProp():AbstractProp
    + boom():void
}
class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + boom():void
}

class Boss {
    - int shootNum
    - int power
    - int direction
    - BloodPropFactory bloodPropFactory
    - BombPropFactory bombPropFactory
    - BulletPropFactory bulletPropFactory
    + Boss(int locationX, int locationY, int speedX, int speedY, int hp)
    + genProp():AbstractProp
    + shoot():List<BaseBullet>
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
    + boom() : vois
}

class BloodProp {
    - int plusHp
    + BloodProp(int locationX, int locationY, int speedX, int speedY)
    + work():void
}

class BombProp{
    - List<CanBoom> canBoomList
    + BombProp(int locationX, int locationY, int speedX, int speedY)
    + addCanBoom(CanBoom canBoom) : void
    + removeCanBoom(CanBoom canBoom) : void
    + notifyAllToBoom() : void
    + work() : void
}

class BulletProp{
    - int bulletNumAdd
    + BulletProp(int locationX, int locationY, int speedX, int speedY)
    + work():void
}



@enduml